Language toggle: right-aligned with markdown="1" trick
- Move language toggle from title to below blockquote
- Use markdown="1" for kramdown processing inside HTML
- Fix docker-compose.yml to use bundle install
- Works on both GitHub repo and Jekyll site

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     command: >
       sh -c "apt-get update -qq &&
              apt-get install -y -qq build-essential > /dev/null &&
-             gem install bundler jekyll just-the-docs webrick -q &&
+             bundle install &&
              jekyll serve --watch --host 0.0.0.0 --livereload"
     ports:
       - "4000:4000"
