Remove AI collaboration references from public content
- Update author attribution to "Ricardo Rocha"
- Remove meta-statements about human-AI authorship
- Simplify preface sections in both languages

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Solo Dev Musings"
-description: "Software-as-craft, AI collaboration, and the philosophy of solo practice"
-author: "Ricardo (with Claude)"
+description: "Software-as-craft and the philosophy of solo practice"
+author: "Ricardo Rocha"
 
 # GitHub Pages base URL (project site)
 baseurl: "/solo-dev-musings"
